Fix custom webview scrollbar

--- a/sass/scrollbar.scss
+++ b/sass/scrollbar.scss
@@ -38,7 +38,7 @@
     }
 
     ::-webkit-scrollbar-corner {
-        background-color: var(--canvas);
+        background-color: color(canvas);
     }
 
     ::-webkit-scrollbar-track {
